--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
@@ -49,11 +49,11 @@
         gap: 8px;
 
         border-radius: 2px;
-        border: 1px solid var(--PC, #46C37B);
-        background: var(--PC, #46C37B);
+        border: 1px solid #46C37B;
+        background: #46C37B;
         box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
 
-        color: var(---, #FFF);
+        color: #FFF;
         text-align: center;
         font-family: "PingFang SC";
         font-size: 14px;
@@ -70,11 +70,11 @@
         gap: 10px;
 
         border-radius: 2px;
-        border: 1px solid var(--PC, #46C37B);
-        background: var(--Neutral-1, #FFF);
+        border: 1px solid #46C37B;
+        background: #FFF;
         box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.02);
 
-        color: var(--PC, #46C37B);
+        color: #46C37B;
         text-align: center;
         font-family: "PingFang SC";
         font-size: 14px;
