--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 16px 46px;
-    border-bottom: 1px solid var(---Line-1, #F2F3F5);
+    border-bottom: 1px solid #F2F3F5;
 
     .test-create-title-left {
       display: flex;
@@ -26,12 +26,12 @@
             width: 7px;
             height: 14px;
             stroke-width: 1.5px;
-            stroke: var(---Text-4, #5E6166);
+            stroke: #5E6166;
           }
         }
 
         .test-create-title-left-back-text {
-          color: var(---Text-5, #37393D);
+          color: #37393D;
           text-align: center;
           font-feature-settings: 'clig' off, 'liga' off;
           font-family: "PingFang SC";
@@ -46,7 +46,7 @@
       i {
         width: 1px;
         height: 12px;
-        border-left: 1px solid var(---Line-2, #E5E6EB);
+        border-left: 1px solid #E5E6EB;
       }
 
       .test-create-title-left-type {
@@ -72,7 +72,7 @@
       align-items: center;
       gap: 16px;
       border-radius: 8px;
-      background: var(---fill-1, #FAFAFA);
+      background: #FAFAFA;
 
       .test-create-title-right-item {
         display: flex;
@@ -82,7 +82,7 @@
       }
 
       .test-create-title-right-text {
-        color: var(---Text-3, #919399);
+        color: #919399;
         font-family: "PingFang SC";
         font-size: 14px;
         font-style: normal;
@@ -108,35 +108,162 @@
   }
 
   .test-create-content {
-    margin: 32px 0;
-    padding: 0 25px;
-    position: relative;
+    padding: 32px 46px 20px 32px;
 
-    .ant-form-item {
+    .test-paper-save-form {
       display: flex;
-    }
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 24px;
+      flex: 1 0 0;
+      align-self: stretch;
 
-    .ant-form-item-label {
-      width: 82px;
-      color: #37393D;
-      font-size: 14px;
-      font-style: normal;
+      .test-paper-save-form-item {
+        display: flex;
+        align-items: center;
+        gap: 16px;
 
-      label {
-        font-weight: normal;
-        margin-right: 16px;
+        .test-paper-save-form-item-label {
+          display: flex;
+          width: 82px;
+          padding: 5px 0;
+          align-items: center;
+          justify-content: flex-end;
+          gap: 4px;
+
+          .test-paper-save-form-item-label-required {
+            color: #F53F3F;
+            text-align: right;
+            font-family: "PingFang SC";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 20px;
+          }
+        }
+
+        .ant-form-item {
+          margin-bottom: 0;
+
+          .ant-input {
+            width: 1000px;
+            padding: 6px 12px;
+            border-radius: 2px;
+            border: 1px solid #E5E6EB;
+            background: #FFF;
+          }
+
+          .max-num {
+            position: absolute;
+            right: 10px;
+            color: #C0C0C2;
+            font-size: 14px;
+          }
+        }
       }
-    }
 
-    .ant-form-item-control-wrapper {
-      flex: 1;
-    }
+      .extraction-method-content {
+        display: flex;
+        width: 1098px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
 
-    .maxNum {
-      position: absolute;
-      right: 10px;
-      color: #C0C0C2;
-      font-size: 14px;
+        .extraction-method-content-setting {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          align-self: stretch;
+
+          .ant-radio-wrapper {
+            font-weight: normal;
+          }
+
+          .question-type-display-setting {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin: 0;
+            cursor: pointer;
+
+            img {
+              width: 16px;
+              height: 16px;
+            }
+
+            span {
+              color: #37393D;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 22px;
+            }
+          }
+        }
+
+        .question-type-display {
+          //display: flex;
+          width: 1098px;
+          padding-left: 98px;
+          align-items: flex-start;
+
+          .question-typ-top {
+            .question-typ-top-list {
+              display: flex;
+
+              span {
+                padding: 16px;
+                width: 138px;
+                height: 54px;
+                font-size: 14px;
+                font-weight: bolder;
+                line-height: 22px;
+              }
+            }
+          }
+
+          .question-type-content {
+            .question-type-content-list {
+              display: flex;
+              margin: 0;
+
+              span {
+                padding: 16px;
+                width: 125px;
+                height: 54px;
+                border: 1px solid #F2F3F5;
+                font-size: 14px;
+                line-height: 22px;
+              }
+
+              input {
+                padding: 16px;
+                width: 125px;
+                height: 54px;
+                border: 1px solid #F2F3F5;
+              }
+
+              .question-type-content-list-total {
+                padding: 16px;
+                width: 125px;
+                height: 54px;
+                background: #FAFAFA;
+                border: 1px solid #F2F3F5;
+                font-size: 14px;
+                font-weight: bolder;
+                line-height: 22px;
+
+                i {
+                  font-size: 12px;
+                  font-style: normal;
+                  font-weight: normal;
+                  color: #5E6166;
+                }
+              }
+            }
+          }
+        }
+      }
     }
 
     .test-paper-number {
@@ -153,7 +280,6 @@
           height: 14px;
         }
       }
-
     }
 
     .test-num-tips {
@@ -181,139 +307,60 @@
       left: 12px;
       top: 121px;
     }
-
-    .extraction-method-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      .question-type-show {
-        margin: 0;
-        cursor: pointer;
-
-        img {
-          width: 16px;
-          height: 16px;
-        }
-
-        span {
-          color: #37393D;
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 22px
-        }
-      }
-
-      .ant-radio-wrapper {
-        font-weight: normal;
-      }
-    }
-
-    .question-type {
-      padding-left: 98px;
-      margin-bottom: 24px;
-      width: 1098px;
-
-      .question-typ-top {
-        .question-typ-top-list {
-          display: flex;
-
-          span {
-            padding: 16px;
-            width: 138px;
-            height: 54px;
-            font-size: 14px;
-            font-weight: bolder;
-            line-height: 22px;
-          }
-        }
-      }
-
-      .question-type-content {
-        .question-type-content-list {
-          display: flex;
-          margin: 0;
-
-          span {
-            padding: 16px;
-            width: 125px;
-            height: 54px;
-            border: 1px solid #F2F3F5;
-            font-size: 14px;
-            line-height: 22px;
-          }
-
-          input {
-            padding: 16px;
-            width: 125px;
-            height: 54px;
-            border: 1px solid #F2F3F5;
-          }
-
-          .question-type-content-list-total {
-            padding: 16px;
-            width: 125px;
-            height: 54px;
-            background: #FAFAFA;
-            border: 1px solid #F2F3F5;
-            font-size: 14px;
-            font-weight: bolder;
-            line-height: 22px;
-
-            i {
-              font-size: 12px;
-              font-style: normal;
-              font-weight: normal;
-              color: #5E6166;
-            }
-          }
-        }
-      }
-    }
   }
 
-  footer {
+  .test-paper-save-footer {
     display: flex;
+    padding: 20px;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    gap: 16px;
+    border-top: 1px solid #EEEFF0;
 
-    .test-create-save {
+    font-family: "PingFang SC";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+
+    .test-paper-save {
+      display: flex;
       padding: 4px 15px;
-      color: #FFF;
-      text-align: center;
-      font-size: 14px;
-      border: none;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
       border-radius: 2px;
+      border: 1px solid #46C37B;
       background: #46C37B;
       box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
-      line-height: 22px;
+      color: #FFF;
+      text-align: center;
     }
 
     .test-create-cancel {
-      margin-left: 16px;
+      display: flex;
       padding: 4px 15px;
-      color: #37393D;
-      text-align: center;
-      font-size: 14px;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
       border-radius: 2px;
       border: 1px solid #DCDEE0;
       background: #FFF;
       box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.02);
-      line-height: 22px;
+      color: #37393D;
+      text-align: center;
     }
   }
 }
 
 .question-type-setting-menu {
   display: flex;
-  padding: var(--Number, 4px) 0 !important;
+  padding: 4px 0 !important;
   flex-direction: column;
   align-items: flex-start;
 
   border-radius: 2px !important;
-  background: var(--Conditional-pop-over, #FFF);
+  background: #fff;
   box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0px 6px 16px 0px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05) !important;
 
   .question-type-setting-menu-item {
@@ -332,10 +379,11 @@
       .question-type-setting-menu-item-label-icon {
         width: 16px;
         height: 16px;
+        cursor: pointer;
       }
 
       .question-type-setting-menu-item-label-text {
-        color: var(---Text-5, #37393D);
+        color: #37393D;
         font-family: "PingFang SC";
         font-size: 14px;
         font-style: normal;
@@ -360,5 +408,10 @@
         height: 12px;
       }
     }
+  }
+
+  .question-type-setting-menu-item-drag {
+    background: #fff;
+    box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0px 6px 16px 0px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05);
   }
 }
