feat: #104833 创建随机卷-返回试卷列表

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-create-model.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-create-model.less
@@ -38,6 +38,7 @@
       gap: 24px;
       border-radius: 4px;
       border: 1px solid #E5E6EB;
+      cursor: pointer;
 
       .create-test-paper-modal-body-list-item-content {
         display: flex;
