feat: #104876 H5端新增AI答题文案提示

--- a/h5/src/h5/assets/styles/containers/course/lesssonTask/test/do.scss
+++ b/h5/src/h5/assets/styles/containers/course/lesssonTask/test/do.scss
@@ -338,4 +338,18 @@
 		border-radius: 4px;
 		transform: translate(-50%, -50%);
 	}
+
+	.notice {
+		margin-bottom: vw(20);
+		padding: 0 vw(20);
+
+		.notice-boreder {
+			border: 1px solid #46c37b;
+		}
+
+		.notice-ai-img {
+			width: vw(16);
+			padding-right: 4px;
+		}
+	}
 }
