--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -449,6 +449,129 @@
           }
         }
       }
+
+      .test-paper-difficulty {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
+
+        .test-paper-difficulty-slider {
+          display: flex;
+          width: 320px;
+          height: 8px;
+          justify-content: center;
+          align-items: center;
+          flex-shrink: 0;
+          margin: 0;
+
+          .ant-slider-rail {
+            width: 320px;
+            height: 8px;
+            flex-shrink: 0;
+            border-radius: 48px;
+            background: #46C37B;
+          }
+
+          .ant-slider-track {
+            height: 8px;
+            background: #46C37B;
+          }
+
+          .ant-slider-handle {
+            width: 24px;
+            height: 24px;
+            flex-shrink: 0;
+            margin-top: 0;
+            border: solid 1px #46C37B;
+          }
+        }
+
+        .test-paper-difficulty-content {
+          display: flex;
+          padding: 0 98px;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 12px;
+
+          .test-paper-difficulty-scale {
+            display: flex;
+            align-items: flex-start;
+            gap: 24px;
+
+            .test-paper-difficulty-scale-text {
+              color: #5E6166;
+              font-feature-settings: 'clig' off, 'liga' off;
+              font-family: "PingFang SC";
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 16px;
+              letter-spacing: 0.1px;
+            }
+          }
+
+          .test-paper-difficulty-count-ratio {
+            display: flex;
+            width: 320px;
+            padding: 8px 16px;
+            justify-content: space-between;
+            align-items: center;
+            border-radius: 4px;
+            background: #FAFAFA;
+
+            .test-paper-difficulty-count-ratio-item {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              gap: 16px;
+
+              .test-paper-difficulty-count-ratio-item-text {
+                color: #919399;
+                font-family: "PingFang SC";
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 22px;
+              }
+
+              .test-paper-difficulty-count-choose {
+                color: #37393D;
+                font-family: D-DIN;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 24px;
+              }
+
+              .test-paper-difficulty-count-total {
+                color: #919399;
+                font-family: D-DIN;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 24px;
+              }
+            }
+
+            i {
+              width: 1px;
+              height: 17px;
+              background: #E5E6EB;
+            }
+          }
+
+          .test-paper-difficulty-tips {
+            color: #919399;
+            font-feature-settings: 'clig' off, 'liga' off;
+            font-family: "PingFang SC";
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 16px;
+          }
+        }
+      }
     }
   }
 
