--- a/app/Resources/views/question-bank/testpaper/index.html.twig
+++ b/app/Resources/views/question-bank/testpaper/index.html.twig
@@ -15,6 +15,7 @@
     {% include 'question-bank/header-navbar.html.twig' %}
     <div class="test-paper-container">
       <div id="app"></div>
+      <input type="hidden" id="itemBankId" value="{{ questionBank.itemBankId }}">
     </div>
   </div>
 {% endblock %}
