--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
@@ -84,4 +84,59 @@
       }
     }
   }
+  .condition-bar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .list-bottom {
+    width: 100%;
+    padding-left: 22px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .checkbox-text {
+    padding-left: 32px;
+    font-weight: normal;
+  }
+  .paper-type {
+    width: 92px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 4px 0;
+    border-radius: 4px;
+  }
+
+  .paper-type-regular {
+    background-color: rgb(232, 243, 255);
+    color: rgb(22, 93, 255);
+  }
+
+  .paper-type-random {
+    background-color: rgb(255, 243, 232);
+    color: rgb(247, 114, 52);
+  }
+
+  .paper-type-ai {
+    background-color: rgb(232, 255, 234);
+    color: rgb(0, 180, 42);
+  }
+  .created_time {
+    font-weight: 400;
+    font-size: 12px;
+    color: rgb(145, 147, 153);
+  }
+  .operation-group {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+  .operation-group-button-active {
+    color: rgb(70, 195, 123)
+  }
 }
