--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -172,6 +172,7 @@
 @import "page/item-bank-exercise/exercise-show/assessment.less";
 @import "page/item-bank-exercise/exercise-show/chapter.less";
 @import "page/item-bank-exercise/exercise-show/advanced.less";
+@import "page/item-bank-exercise/add-test-paper-drawer.less";
 @import "page/question-manage/questions-import-modal.less"; // 导入题目模态框样式
 @import "page/question-manage/administrator-import-modal.less"; // 管理员视角弹框
 @import "page/question-manage/non-administrator-perspective-modal.less"; // 非管理员视角
