--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -413,9 +413,193 @@
           }
         }
 
+        .question-type-category-display {
+          display: flex;
+          position: relative;
+          width: 100%;
+          align-items: flex-start;
+
+          .question-type-category-display-header {
+            width: 410px;
+            flex-shrink: 0;
+          }
+
+          .question-type-category-display-header-top {
+            display: flex;
+            padding: 16px;
+            align-items: center;
+            gap: 8px;
+            align-self: stretch;
+            border-bottom: 1px solid #E5E6EB;
+            color: #37393D;
+            font-family: "PingFang SC";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 22px;
+          }
+
+          .question-type-category-display-header-type {
+            flex: 1 0 0;
+          }
+
+          .question-type-category-display-header-top-content {
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: 100% 6px;
+            background-image: linear-gradient(to right, rgba(239, 255, 246, 1) 0%, rgba(147, 225, 180, 1) 100%);
+          }
+
+          .question-type-category-display-header-normal {
+            display: flex;
+            padding: 16px;
+            align-items: center;
+            gap: 8px;
+            align-self: stretch;
+            border-bottom: 1px solid #F2F3F5;
+            background: #FFF;
+
+            color: #37393D;
+            font-family: "PingFang SC";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px;
+          }
+
+          .category-name {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 1;
+          }
+
+          .question-type-category-display-cell-number-total {
+            color: #C0C0C2;
+            font-family: "PingFang SC";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px;
+          }
+          .question-type-category-display-header-bottom {
+            display: flex;
+            padding: 16px;
+            align-items: baseline;
+            align-self: stretch;
+            border-bottom: 1px solid #F2F3F5;
+            background: #FAFAFA;
+
+            .question-type-category-display-header-bottom-title {
+              color: #37393D;
+              font-family: "PingFang SC";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 22px;
+            }
+
+            .question-type-category-display-header-bottom-description {
+              color: #5E6166;
+              font-family: "PingFang SC";
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 12px;
+            }
+          }
+
+          .question-type-category-display-cell-number {
+            display: flex;
+            padding: 16px;
+            justify-content: space-between;
+            align-items: center;
+            align-self: stretch;
+            border-left: 1px solid #F2F3F5;
+            border-bottom: 1px solid #F2F3F5;
+            background: #FFF;
+
+            .question-type-category-display-cell-number-edit {
+              color: #37393D;
+              font-family: "PingFang SC";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 22px;
+            }
+
+            .question-type-category-display-cell-number-total {
+              color: #C0C0C2;
+              font-family: "PingFang SC";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 22px;
+            }
+          }
+
+          .question-type-category-display-cell-score {
+            display: flex;
+            padding: 16px;
+            align-items: center;
+            gap: 8px;
+            align-self: stretch;
+            border-left: 1px solid #F2F3F5;
+            border-bottom: 1px solid #F2F3F5;
+            background: #FFF;
+
+            color: #37393D;
+            font-family: "PingFang SC";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px;
+          }
+
+          .question-type-category-display-cell-sum {
+            display: flex;
+            padding: 16px;
+            align-items: center;
+            gap: 8px;
+            align-self: stretch;
+            border-left: 1px solid #F2F3F5;
+            border-bottom: 1px solid #F2F3F5;
+            background: #FAFAFA;
+
+            color: #37393D;
+            font-family: "PingFang SC";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 22px;
+          }
+
+          input {
+            border: 0;
+            width: 100%;
+            height: 100%;
+          }
+
+          .edit-mask-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.4);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            button {
+              width: 114px
+            }
+          }
+        }
+
         .question-category-choose {
           display: flex;
-          padding: 0 98px;
+          padding-left: 98px;
           flex-direction: column;
           align-items: flex-start;
           gap: 10px;
