feat: #104820 创建随机卷 题型分类抽题 编辑界面显示

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -247,27 +247,6 @@
           .ant-radio-wrapper {
             font-weight: normal;
           }
-
-          .question-type-display-setting {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin: 0;
-            cursor: pointer;
-
-            img {
-              width: 16px;
-              height: 16px;
-            }
-
-            span {
-              color: #37393D;
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 22px;
-            }
-          }
         }
 
         .question-type-display {
@@ -410,190 +389,6 @@
             border: 0;
             width: 100%;
             height: 100%;
-          }
-        }
-
-        .question-type-category-display {
-          display: flex;
-          position: relative;
-          width: 100%;
-          align-items: flex-start;
-
-          .question-type-category-display-header {
-            width: 410px;
-            flex-shrink: 0;
-          }
-
-          .question-type-category-display-header-top {
-            display: flex;
-            padding: 16px;
-            align-items: center;
-            gap: 8px;
-            align-self: stretch;
-            border-bottom: 1px solid #E5E6EB;
-            color: #37393D;
-            font-family: "PingFang SC";
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 22px;
-          }
-
-          .question-type-category-display-header-type {
-            flex: 1 0 0;
-          }
-
-          .question-type-category-display-header-top-content {
-            background-repeat: no-repeat;
-            background-position: left bottom;
-            background-size: 100% 6px;
-            background-image: linear-gradient(to right, rgba(239, 255, 246, 1) 0%, rgba(147, 225, 180, 1) 100%);
-          }
-
-          .question-type-category-display-header-normal {
-            display: flex;
-            padding: 16px;
-            align-items: center;
-            gap: 8px;
-            align-self: stretch;
-            border-bottom: 1px solid #F2F3F5;
-            background: #FFF;
-
-            color: #37393D;
-            font-family: "PingFang SC";
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 22px;
-          }
-
-          .category-name {
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 1;
-          }
-
-          .question-type-category-display-cell-number-total {
-            color: #C0C0C2;
-            font-family: "PingFang SC";
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 22px;
-          }
-          .question-type-category-display-header-bottom {
-            display: flex;
-            padding: 16px;
-            align-items: baseline;
-            align-self: stretch;
-            border-bottom: 1px solid #F2F3F5;
-            background: #FAFAFA;
-
-            .question-type-category-display-header-bottom-title {
-              color: #37393D;
-              font-family: "PingFang SC";
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 22px;
-            }
-
-            .question-type-category-display-header-bottom-description {
-              color: #5E6166;
-              font-family: "PingFang SC";
-              font-size: 12px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 12px;
-            }
-          }
-
-          .question-type-category-display-cell-number {
-            display: flex;
-            padding: 16px;
-            justify-content: space-between;
-            align-items: center;
-            align-self: stretch;
-            border-left: 1px solid #F2F3F5;
-            border-bottom: 1px solid #F2F3F5;
-            background: #FFF;
-
-            .question-type-category-display-cell-number-edit {
-              color: #37393D;
-              font-family: "PingFang SC";
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 22px;
-            }
-
-            .question-type-category-display-cell-number-total {
-              color: #C0C0C2;
-              font-family: "PingFang SC";
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 22px;
-            }
-          }
-
-          .question-type-category-display-cell-score {
-            display: flex;
-            padding: 16px;
-            align-items: center;
-            gap: 8px;
-            align-self: stretch;
-            border-left: 1px solid #F2F3F5;
-            border-bottom: 1px solid #F2F3F5;
-            background: #FFF;
-
-            color: #37393D;
-            font-family: "PingFang SC";
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 22px;
-          }
-
-          .question-type-category-display-cell-sum {
-            display: flex;
-            padding: 16px;
-            align-items: center;
-            gap: 8px;
-            align-self: stretch;
-            border-left: 1px solid #F2F3F5;
-            border-bottom: 1px solid #F2F3F5;
-            background: #FAFAFA;
-
-            color: #37393D;
-            font-family: "PingFang SC";
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 22px;
-          }
-
-          input {
-            border: 0;
-            width: 100%;
-            height: 100%;
-          }
-
-          .edit-mask-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.4);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            button {
-              width: 114px
-            }
           }
         }
 
@@ -799,6 +594,296 @@
       box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.02);
       color: #37393D;
       text-align: center;
+    }
+  }
+
+  .drawer-container {
+    .ant-drawer-wrapper-body {
+      display: flex;
+      flex-direction: column;
+    }
+    .ant-drawer-body {
+      flex: 1 0 0;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      padding: 20px 20px 70px 20px;
+    }
+    .drawer-header {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      color: var(---Text-5, #37393D);
+      text-align: center;
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-weight: 400;
+      line-height: 24px; /* 150% */
+      letter-spacing: 0.1px;
+
+      .drawer-header-return {
+        cursor: pointer;
+      }
+
+      .separator {
+        width: 1px;
+        height: 12px;
+        border-right: 1px solid rgba(214, 216, 218, 1);
+      }
+    }
+
+    .drawer-body {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .drawer-bottom {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      padding: 16px 24px;
+      border-top: 1px solid #EFF0F5;
+      left: 0;
+      right: 0;
+      position: absolute;
+      bottom: 0;
+      background: white;
+    }
+  }
+
+  .question-type-category-display {
+    flex: 1 0 0;
+    display: flex;
+    position: relative;
+    width: 100%;
+    align-items: flex-start;
+
+    .question-type-category-display-header {
+      width: 410px;
+      flex: none;
+    }
+
+    .question-type-category-display-header-action {
+      width: 64px;
+      flex: none;
+
+      a {
+        color: var(--PC, #46C37B);
+      }
+    }
+
+    .question-type-category-display-header-top {
+      display: flex;
+      padding: 16px;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+      border-bottom: 1px solid #E5E6EB;
+      color: #37393D;
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 22px;
+    }
+
+    .question-type-category-display-header-score {
+      display: flex;
+      padding: 16px;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+      border-bottom: 1px solid #F2F3F5;
+      background: #FFF;
+
+      color: var(---Text-5, #37393D);
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 22px;
+    }
+
+    .question-type-category-display-header-type {
+      flex: 1 0 0;
+    }
+
+    .question-type-category-display-header-top-content {
+      background-repeat: no-repeat;
+      background-position: left bottom;
+      background-size: 100% 6px;
+      background-image: linear-gradient(to right, rgba(239, 255, 246, 1) 0%, rgba(147, 225, 180, 1) 100%);
+    }
+
+    .question-type-category-display-header-normal {
+      display: flex;
+      padding: 16px;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+      border-bottom: 1px solid #F2F3F5;
+      background: #FFF;
+
+      color: #37393D;
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+    }
+
+    .category-name {
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 1;
+    }
+
+    .question-type-category-display-header-bottom {
+      display: flex;
+      padding: 16px;
+      align-items: baseline;
+      align-self: stretch;
+      border-bottom: 1px solid #F2F3F5;
+      background: #FAFAFA;
+
+      .question-type-category-display-header-bottom-title {
+        color: #37393D;
+        font-family: "PingFang SC";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 22px;
+      }
+
+      .question-type-category-display-header-bottom-description {
+        color: #5E6166;
+        font-family: "PingFang SC";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 12px;
+      }
+    }
+
+    .question-type-category-display-cell {
+      display: flex;
+      padding: 16px;
+      justify-content: space-between;
+      align-items: center;
+      align-self: stretch;
+      border-left: 1px solid #F2F3F5;
+      border-bottom: 1px solid #F2F3F5;
+      background: #FFF;
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+
+      .question-type-category-display-cell-number {
+        min-height: 22px;
+        color: var(---Text-5, #37393D);
+      }
+
+      .question-type-category-display-cell-number-total {
+        color: var(---Text-2, #C0C0C2);
+      }
+
+      .question-type-category-display-cell-number-edit {
+        color: #37393D;
+        font-family: "PingFang SC";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22px;
+      }
+    }
+
+    .question-type-category-display-cell.question-type-category-display-cell-inactive {
+      background: var(---fill-2, #F5F5F5);
+    }
+
+    .question-type-category-display-cell-score {
+      display: flex;
+      padding: 16px;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+      border-left: 1px solid #F2F3F5;
+      border-bottom: 1px solid #F2F3F5;
+      background: #FFF;
+
+      color: #37393D;
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+    }
+
+    .question-type-category-display-cell-sum {
+      display: flex;
+      padding: 16px;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+      border-left: 1px solid #F2F3F5;
+      border-bottom: 1px solid #F2F3F5;
+      background: #FAFAFA;
+      min-height: 55px;
+
+      color: #37393D;
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 22px;
+    }
+
+    input {
+      border: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .edit-mask-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.4);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      button {
+        width: 114px
+      }
+    }
+  }
+
+  .question-type-display-setting {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    width: fit-content;
+    margin: 0 0 0 auto;
+
+    img {
+      width: 16px;
+      height: 16px;
+    }
+
+    span {
+      color: #37393D;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
     }
   }
 }
