--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -659,6 +659,10 @@
     width: 100%;
     align-items: flex-start;
 
+    .row-editing {
+      background: rgba(70, 195, 123, 0.05);
+    }
+
     .question-type-category-display-header {
       width: 410px;
       flex: none;
@@ -695,7 +699,6 @@
       gap: 8px;
       align-self: stretch;
       border-bottom: 1px solid #F2F3F5;
-      background: #FFF;
 
       color: var(---Text-5, #37393D);
       font-family: "PingFang SC";
@@ -723,7 +726,6 @@
       gap: 8px;
       align-self: stretch;
       border-bottom: 1px solid #F2F3F5;
-      background: #FFF;
 
       color: #37393D;
       font-family: "PingFang SC";
@@ -775,12 +777,15 @@
       align-self: stretch;
       border-left: 1px solid #F2F3F5;
       border-bottom: 1px solid #F2F3F5;
-      background: #FFF;
       font-family: "PingFang SC";
       font-size: 14px;
       font-style: normal;
       font-weight: 400;
       line-height: 22px;
+
+      input {
+        padding: 0;
+      }
 
       .question-type-category-display-cell-number {
         min-height: 22px;
@@ -803,6 +808,10 @@
 
     .question-type-category-display-cell.question-type-category-display-cell-inactive {
       background: var(---fill-2, #F5F5F5);
+    }
+
+    .question-type-category-display-cell.question-type-category-display-cell-active {
+      cursor: pointer;
     }
 
     .question-type-category-display-cell-score {
