feat: #104817 创建随机卷-按题型分类抽题-关闭分类选择二次确认

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -979,6 +979,10 @@
       align-items: center;
       align-self: stretch;
       border-bottom: 1px solid #EFF0F5;
+
+      .ant-drawer-close {
+        top: unset;
+      }
     }
 
     .ant-drawer-body {
