--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -608,6 +608,17 @@
       display: flex;
       flex-direction: column;
       padding: 20px 20px 70px 20px;
+
+      .question-type-category-display-cell {
+        justify-content: space-between;
+      }
+
+      .question-type-category-display-cell-sum {
+        justify-content: space-between;
+        padding: 16px;
+        white-space: nowrap;
+      }
+
     }
     .drawer-header {
       display: flex;
@@ -772,7 +783,7 @@
     .question-type-category-display-cell {
       display: flex;
       padding: 16px;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       align-self: stretch;
       border-left: 1px solid #F2F3F5;
@@ -808,6 +819,10 @@
 
     .question-type-category-display-cell.question-type-category-display-cell-inactive {
       background: var(---fill-2, #F5F5F5);
+
+      .question-type-category-display-cell-number {
+        color: var(---Text-2, #C0C0C2);
+      }
     }
 
     .question-type-category-display-cell.question-type-category-display-cell-active {
@@ -834,7 +849,8 @@
 
     .question-type-category-display-cell-sum {
       display: flex;
-      padding: 16px;
+      justify-content: center;
+      padding: 8px;
       align-items: center;
       gap: 8px;
       align-self: stretch;
@@ -842,6 +858,7 @@
       border-bottom: 1px solid #F2F3F5;
       background: #FAFAFA;
       min-height: 55px;
+      white-space: nowrap;
 
       color: #37393D;
       font-family: "PingFang SC";
