feat: #104804 试卷说明编辑框放大效果

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -218,6 +218,10 @@
                 height: 32px;
               }
             }
+
+            .cke_reset {
+              width: 1000px;
+            }
           }
 
           .max-num {
@@ -232,6 +236,10 @@
             line-height: 20px;
           }
         }
+      }
+
+      .test-paper-save-form-item-align-flex-start {
+        align-items: flex-start;
       }
 
       .extraction-method-content {
@@ -605,6 +613,7 @@
       display: flex;
       flex-direction: column;
     }
+
     .ant-drawer-body {
       flex: 1 0 0;
       overflow-y: auto;
@@ -623,6 +632,7 @@
       }
 
     }
+
     .drawer-header {
       display: flex;
       align-items: center;
