feat: #104808 随机卷创建-按题型抽题-试卷名称上下滑动固定

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -1,5 +1,6 @@
 .test-create {
   .test-create-title {
+    background: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
