--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
@@ -99,6 +99,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .selector-operate {
+      display: flex;
+      gap: 16px
+    }
   }
 
   .checkbox-text {
